2000-03-01  Mo DeJong  <mdejong@redhat.com>

	Released Jikes 1.13.

2001-02-27  Mo DeJong  <mdejong@redhat.com>

	* TODO: Add note about reverted patch.
	* doc/jikes.1: Fixup man page.
	* src/jikes.cpp: Fixup copyright year.

2001-02-27  Mo DeJong  <mdejong@redhat.com>

	* HACKING:
	* INSTALL:
	* README:
	* jikes.spec: Update URLs and
	instructions for 1.13 release.
	* doc/Makefile.am: Removed
	file in doc dir.
	* doc/contrib.html:
	* doc/jikes.gif:
	* doc/jikes.html:
	* doc/news.html: Removed.

2001-02-26  Mo DeJong  <mdejong@redhat.com>

	* src/jikesapi.cpp (DefaultFileReader):
	Use const_cast operator only when
	HAVE_CONST_CAST is defined. Comment
	out an assert that depends on the
	binary mode of SystemFread.

2001-02-24  Mo DeJong  <mdejong@redhat.com>

	* src/option.cpp:
	* src/option.h:
	Revert @file patch applied on 2001-02-17.

2001-02-21  Christopher Abbey  <cabbey@bresnanlink.net>

	* src/option.cpp (Option):
	Reset the encoding field to NULL
	in the case where the -encoding
	option is not valid.

2001-02-20  Eric Blake  <ebb9@email.byu.edu>

	* src/stream.cpp (Stream, ~Stream):
	Fix typos that break the build on
	systems without iconv or icu.

2001-02-19  Mo DeJong  <mdejong@redhat.com>

	* src/jikes.cpp (main): Only print the
	-encoding option when compiled with
	iconv or icu support.
	* src/option.cpp (Option):
	Move iconv and icu code to Stream class.
	Use encoding field to store the name
	of the encoding in use. Remove converter
	field, use encoding instead. Call
	Stream::IsSupportedEncoding method to
	determine if a given encoding is valid.
	* src/option.h (Option): Remove
	iconv and icu headers and the
	converter field.
	* src/platform.cpp (U8S_command_format):
	Only print the -encoding option when
	compiled with iconv or icu support.
	* src/stream.cpp (Stream, ~Stream,
	IsSupportedEncoding, SetEncoding,
	DestroyEncoding, LexStream,
	ProcessInputAscii, ProcessInputUnicode):
	Extract new Stream class from LexStream.