@@ -1,3 +1,12 @@
+2000-03-03  Mo DeJong  <mdejong@redhat.com>
+
+	* src/dump.cpp (Dump): Add debugging
+	Dump method. The method signature is
+ 	char* Dump(wchar_t*), it takes a
+	wchar_t* and returns a char* with
+	the chars outside the ASCII range
+	escaped with \uXXXX ids.
+
 2000-03-01  Mo DeJong  <mdejong@redhat.com>
 
 	Released Jikes 1.13.
